fixing post tile size on mobile

--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -606,7 +606,7 @@ canvas {
     }
   }
   .section-title {
-    font-size: 80px;
+    font-size: 50px;
   }
   .content {
     padding: 20px
